--- a/crm_pc/.env.development
+++ b/crm_pc/.env.development
@@ -2,4 +2,7 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+# VUE_APP_BASE_API = '/dev-api'
+
+# 开发环境，服务器端地址
+VUE_APP_BASE_API = 'http://106.14.178.16:1000'
